RESOLVED FIXED138937
WebPlugInClient::m_webPage can never be null, use a reference
https://bugs.webkit.org/show_bug.cgi?id=138937
Summary WebPlugInClient::m_webPage can never be null, use a reference
Anders Carlsson
Reported 2014-11-20 14:50:11 PST
WebPlugInClient::m_webPage can never be null, use a reference
Attachments
Patch (6.52 KB, patch)
2014-11-20 14:50 PST, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2014-11-20 14:50:32 PST
Andreas Kling
Comment 2 2014-11-20 14:51:55 PST
Comment on attachment 241987 [details] Patch igp;r=me
Anders Carlsson
Comment 3 2014-11-20 14:57:18 PST
Note You need to log in before you can comment on or make changes to this bug.