WebPlugInClient::m_webPage can never be null, use a reference https://bugs.webkit.org/show_bug.cgi?id=138937

Reviewed by Andreas Kling.

* WebProcess/WebCoreSupport/WebPlugInClient.cpp:
(WebKit::WebPlugInClient::WebPlugInClient):
(WebKit::WebPlugInClient::shouldAutoStartFromOrigin):
* WebProcess/WebCoreSupport/WebPlugInClient.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::shouldPlugInAutoStartFromOrigin):
* WebProcess/WebProcess.h:

Canonical link: https://commits.webkit.org/156806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176420 268f45cc-cd09-0410-ab3c-d52691b4dbfc