Source/WebKit2/WebProcess/WebCoreSupport/WebPlugInClient.cpp
@@ -33,8 +33,9 @@
 
 namespace WebKit {
 
-WebPlugInClient::WebPlugInClient(WebPage* page)
-    : m_page(page)
+WebPlugInClient::WebPlugInClient(WebPage& webPage)
+    : m_webPage(webPage)
+
 {
 }
 
@@ -49,7 +50,7 @@ void WebPlugInClient::pageDestroyed()
 
 bool WebPlugInClient::shouldAutoStartFromOrigin(const String& pageOrigin, const String& pluginOrigin, const String& mimeType)
 {
-    return WebProcess::shared().shouldPlugInAutoStartFromOrigin(m_page, pageOrigin, pluginOrigin, mimeType);
+    return WebProcess::shared().shouldPlugInAutoStartFromOrigin(m_webPage, pageOrigin, pluginOrigin, mimeType);
 }
 
 void WebPlugInClient::didStartFromOrigin(const String& pageOrigin, const String& pluginOrigin, const String& mimeType, WebCore::SessionID sessionID)
